--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.0.1",
     "css-minimizer-webpack-plugin": "1.1.5",
+    "file-loader": "^6.2.0",
     "html-loader": "1.3.2",
     "html-webpack-plugin": "4.5.0",
     "http-server": "0.12.3",
@@ -28,6 +29,7 @@
     "precss": "4.0.0",
     "style-loader": "2.0.0",
     "terser-webpack-plugin": "5.0.3",
+    "url-loader": "^4.1.1",
     "webpack": "5.10.1",
     "webpack-cli": "4.2.0",
     "webpack-dev-server": "3.11.0"
