--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.0.1",
     "css-minimizer-webpack-plugin": "1.1.5",
-    "file-loader": "^6.2.0",
+    "file-loader": "6.2.0",
     "html-loader": "1.3.2",
     "html-webpack-plugin": "4.5.0",
     "http-server": "0.12.3",
     "mini-css-extract-plugin": "1.3.3",
-    "node-sass": "^5.0.0",
+    "node-sass": "5.0.0",
     "normalize.css": "8.0.1",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "postcss-loader": "4.1.0",
     "precss": "4.0.0",
-    "sass-loader": "^10.1.0",
+    "sass-loader": "10.1.0",
     "style-loader": "2.0.0",
     "terser-webpack-plugin": "5.0.3",
-    "url-loader": "^4.1.1",
+    "url-loader": "4.1.1",
     "webpack": "5.10.1",
     "webpack-cli": "4.2.0",
     "webpack-dev-server": "3.11.0"
